[package]
name = "ddmw-util"
version = "0.1.2"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "ddmw" ]
repository = "https://github.com/openqrnch/ddmw-util"
description = "Utility functions for DDMW integrations"

[dependencies]
bytes = { version = "0.5", optional = true }

