[package]
name = "ddmw-util"
version = "0.2.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "ddmw" ]
repository = "https://github.com/openqrnch/ddmw-util"
description = "Utility functions for DDMW integrations"
exclude = [ "ddmwapp.toml", "examples" ]

[dependencies]
figment = { version = "0.10", features = ["toml"] }
serde = { version = "1", features = ["derive"] }

